--- a/app/views/shared/_section_2.html.erb
+++ b/app/views/shared/_section_2.html.erb
@@ -1,8 +1,8 @@
 
 <div class="crumbs">
 	<ul>
-		<li><a href="http://localhost:3000/">Home</a></li>
-		<li><a href="http://localhost:3000/show">Single</a></li>
+		<li><a href="http://vishatyagibodybuilding.herokuapp.com/">Home</a></li>
+		<li><a href="http://vishatyagibodybuilding.herokuapp.com/show">Single</a></li>
 	</ul>
 </div>
 <div id="main-content">
@@ -12,8 +12,8 @@
 				<div class="row wrap-post"><!--Start Box-->
 					<div class="entry-header">
 						<span class="time">June 26, 2016  by admin</span>
-						<h2 class="entry-title"><a href="http://localhost:3000/show">RETRO GALLERY: FRAGMENTING PERSISTENT FLIGHT AND PATHOLOGY</a></h2>
-						<span class="cat-links"><a href="http://localhost:3000/show">BUSINESS</a>, <a href="http://localhost:3000/show">LIFESTYLE</a></span>
+						<h2 class="entry-title"><a href="http://vishatyagibodybuilding.herokuapp.com/show">RETRO GALLERY: FRAGMENTING PERSISTENT FLIGHT AND PATHOLOGY</a></h2>
+						<span class="cat-links"><a href="http://vishatyagibodybuilding.herokuapp.com/show">BUSINESS</a>, <a href="http://vishatyagibodybuilding.herokuapp.com/show">LIFESTYLE</a></span>
 					</div>
 					<div class="post-thumbnail-wrap">
 						<img src="/assets/slide2.jpg">
