--- a/app/views/shared/_header_2.html.erb
+++ b/app/views/shared/_header_2.html.erb
@@ -21,31 +21,31 @@
 				</div>
 			</div>
 			<div class="logo">
-				<a href="http://localhost:3000/show">zYoung</a>
+				<a href="http://vishatyagibodybuilding.herokuapp.com/show">zYoung</a>
 				<span>The Best Fitness Grow Your Strenght</span>
 			</div>
 			<div id="cssmenu" class="t-left">
 				<ul>
-				   <li><a href="http://localhost:3000/"><span>zYoung</span></a></li>
-				   <li class="has-sub"><a href="http://localhost:3000/show"><span>Category</span></a>
+				   <li><a href="http://vishatyagibodybuilding.herokuapp.com/"><span>zYoung</span></a></li>
+				   <li class="has-sub"><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Category</span></a>
 					  <ul>
-						 <li class="has-sub"><a href="http://localhost:3000/show"><span>Item 1</span></a>
+						 <li class="has-sub"><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Item 1</span></a>
 							<ul>
-							   <li><a href="http://localhost:3000/show"><span>Sub Item</span></a></li>
-							   <li class="last"><a href="http://localhost:3000/show"><span>Sub Item</span></a></li>
+							   <li><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Sub Item</span></a></li>
+							   <li class="last"><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Sub Item</span></a></li>
 							</ul>
 						 </li>
-						 <li class="has-sub"><a href="http://localhost:3000/show"><span>Item 2</span></a>
+						 <li class="has-sub"><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Item 2</span></a>
 							<ul>
-							   <li><a href="http://localhost:3000/show"><span>Sub Item</span></a></li>
-							   <li class="last"><a href="http://localhost:3000/show"><span>Sub Item</span></a></li>
+							   <li><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Sub Item</span></a></li>
+							   <li class="last"><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Sub Item</span></a></li>
 							</ul>
 						 </li>
 					  </ul>
 				   </li>
-				   <li><a href="http://localhost:3000/show"><span>Archive</span></a></li>
-				   <li class="active"><a href="http://localhost:3000/show"><span>About</span></a></li>
-				   <li class="last"><a href="http://localhost:3000/contact"><span>Contact</span></a></li>
+				   <li><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>Archive</span></a></li>
+				   <li class="active"><a href="http://vishatyagibodybuilding.herokuapp.com/show"><span>About</span></a></li>
+				   <li class="last"><a href="http://vishatyagibodybuilding.herokuapp.com/contact"><span>Contact</span></a></li>
 				</ul>
 			</div>
 			<div id="owl-slide" class="owl-carousel">
@@ -56,7 +56,7 @@
 						<div class="col-md-12 text-left">
 							<h1>LEARN BOXING</h1>
 							<p>Best MMA Coaches In The Country</p>
-							<a class="button" href="http://localhost:3000/show">Read More</a>
+							<a class="button" href="http://vishatyagibodybuilding.herokuapp.com/show">Read More</a>
 						</div>
 					</div><!-- /header-text -->
 				</div>
@@ -67,7 +67,7 @@
 						<div class="col-md-12 text-left">
 							<h1>LEARN BOXING</h1>
 							<p>Best MMA Coaches In The Country</p>
-							<a class="button" href="http://localhost:3000/show">Read More</a>
+							<a class="button" href="http://vishatyagibodybuilding.herokuapp.com/show">Read More</a>
 						</div>
 					</div><!-- /header-text -->
 				</div>
@@ -78,7 +78,7 @@
 						<div class="col-md-12 text-left">
 							<h1>LEARN BOXING</h1>
 							<p>Best MMA Coaches In The Country</p>
-							<a class="button" href="http://localhost:3000/show">Read More</a>
+							<a class="button" href="http://vishatyagibodybuilding.herokuapp.com/show">Read More</a>
 						</div>
 					</div><!-- /header-text -->
 					
