--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,8 @@
 							<img src="/assets/1.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<!-- <a class="cat" href="/show">LANGUAGE</a> -->
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -21,14 +22,14 @@
 									<p>Suspendisse porttitor sapien ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan eu id nibh.</p>
 									<p>Donec accumsan ut mi et tincidunt. Aliquam eget metus nec leo tempor bibendum. Phasellus tincidunt lobortis metus. Duis euismod lorem turpis,</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 						<div class="box-entry">
 							<img src="/assets/2.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -38,14 +39,14 @@
 									<h3>CLASS APTENT TACITI SOCIO SQU AD LITORA</h3>
 									<p>Suspendisse porttitor sapien ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan eu id nibh. Donec accumsan ut mi et tincidunt</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 						<div class="box-entry">
 							<img src="/assets/3.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -55,7 +56,7 @@
 									<h3>CLASS APTENT TACITI SOCIO SQU AD LITORA</h3>
 									<p>Suspendisse porttitor sapien ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan.</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 					</div>
@@ -66,7 +67,7 @@
 							<img src="/assets/4.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -76,14 +77,14 @@
 									<h3>CLASS APTENT TACITI SOCIO SQU AD LITORA</h3>
 									<p>Suspendisse porttitor sapien ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan.</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 						<div class="box-entry">
 							<img src="/assets/5.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -93,14 +94,14 @@
 									<h3>CLASS APTENT TACITI SOCIO SQU AD LITORA</h3>
 									<p>Suspendisse porttitor sapien ac imperdiet. Curabitur nec nibh at accumsan.</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 						<div class="box-entry">
 							<img src="/assets/6.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -110,7 +111,7 @@
 									<h3>CLASS APTENT TACITI SOCIO SQU AD LITORA</h3>
 									<p>Suspendisse porttitor sapien ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan.</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 					</div>
@@ -121,7 +122,7 @@
 							<img src="/assets/7.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -131,14 +132,14 @@
 									<h3>CLASS APTENT TACITI SOCIO SQU AD LITORA</h3>
 									<p>Suspendisse porttitor sapien ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan eu id nibh. Donec accumsan ut mi et tincidunt sapien ac lectus euismod imperdiet</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 						<div class="box-entry">
 							<img src="/assets/8.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -149,14 +150,14 @@
 									<p>Suspendisse porttitor  ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan eu id nibh.</p>
 									<p>Donec accumsan ut mi et tincidunt. Aliquam eget metus nec leo tempor bibendum. Phasellus tincidunt lobortis metus. Duis euismod .</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 						<div class="box-entry">
 							<img src="/assets/9.jpg" class="img-responsive"/>
 							<div class="entry-details">
 								<div class="entry-meta ">
-									<a class="cat" href="http://vishaltyagibodybuilding.herokuapp.com/show">LANGUAGE</a>
+									<a class="cat" href="/show">LANGUAGE</a>
 									<div class="f-right t-right">
 										<span><i class="fa fa-calendar"></i> 25/3/2016 </span> 
 										<span><i class="fa fa-heart"></i> 12</span>
@@ -167,7 +168,7 @@
 									<p>Suspendisse porttitor sapien ac lectus euismod imperdiet. Curabitur nec nibh at massa pellentesque accumsan eu id nibh.</p>
 									<p>Donec accumsan ut mi et tincidunt. Aliquam eget metus nec leo tempor bibendum. Phasellus tincidunt lobortis metus. Duis euismod lorem turpis,</p>
 								</div>
-								<a class="button" href="http://vishaltyagibodybuilding.herokuapp.com/show">Read More</a>
+								<a class="button" href="/show">Read More</a>
 							</div>
 						</div>
 					</div>
