--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,39 +12,39 @@
 			<div class="wrap-col">
 				<h3 class="widget-title">Recent Post</h3>
 				<ul>
-					<li><a href="http://vishaltyagibodybuilding.herokuapp.com/show">MOST VISITED COUNTRIES</a></li>
-					<li><a href="http://vishaltyagibodybuilding.herokuapp.com/show">5 PLACES THAT MAKE A GREAT HOLIDAY</a></li>
-					<li><a href="http://vishaltyagibodybuilding.herokuapp.com/show">PEBBLE TIME STEEL IS ON TRACK TO SHIP IN JULY</a></li>
-					<li><a href="http://vishaltyagibodybuilding.herokuapp.com/show">STARTUP COMPANY???S CO-FOUNDER TALKS ON HIS NEW PRODUCT</a></li>
+					<li><a href="/show">MOST VISITED COUNTRIES</a></li>
+					<li><a href="/show">5 PLACES THAT MAKE A GREAT HOLIDAY</a></li>
+					<li><a href="/show">PEBBLE TIME STEEL IS ON TRACK TO SHIP IN JULY</a></li>
+					<li><a href="/show">STARTUP COMPANY???S CO-FOUNDER TALKS ON HIS NEW PRODUCT</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="col-1-4 col-footer-3">
 			<div class="wrap-col">
 				<h3 class="widget-title">Tag Cloud</h3>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">animals</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">cooking</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">countries</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">city</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">children</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">home</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">likes</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">photo</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">link</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">law</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">shopping</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">skate</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">scholl</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">video</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">travel</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">images</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">love</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">lists</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">makeup</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">media</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">password</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">pagination</a>
-				<a href="http://vishaltyagibodybuilding.herokuapp.com/show">wildlife</a>
+				<a href="/show">animals</a>
+				<a href="/show">cooking</a>
+				<a href="/show">countries</a>
+				<a href="/show">city</a>
+				<a href="/show">children</a>
+				<a href="/show">home</a>
+				<a href="/show">likes</a>
+				<a href="/show">photo</a>
+				<a href="/show">link</a>
+				<a href="/show">law</a>
+				<a href="/show">shopping</a>
+				<a href="/show">skate</a>
+				<a href="/show">scholl</a>
+				<a href="/show">video</a>
+				<a href="/show">travel</a>
+				<a href="/show">images</a>
+				<a href="/show">love</a>
+				<a href="/show">lists</a>
+				<a href="/show">makeup</a>
+				<a href="/show">media</a>
+				<a href="/show">password</a>
+				<a href="/show">pagination</a>
+				<a href="/show">wildlife</a>
 			</div>
 		</div>
 		<div class="col-1-4 col-footer-4">
@@ -76,8 +76,8 @@
 	<div class="zerogrid wrapper">
 		Copyright @ zYoung - <a href="https://www.zerotheme.com" title="free html5 templates">Html5 Templates</a> by Zerotheme</a>
 		<ul class="quick-link">
-			<li><a href="http://vishaltyagibodybuilding.herokuapp.com/show">Privacy Policy</a></li>
-			<li><a href="http://vishaltyagibodybuilding.herokuapp.com/show">Terms of Use</a></li>
+			<li><a href="/show">Privacy Policy</a></li>
+			<li><a href="/show">Terms of Use</a></li>
 		</ul>
 	</div>
 </div>
